# Taweret

./: .buildinfo  .coveragerc  .flake8  .gitignore  .gitmodules  .readthedocs.yaml  CONTRIBUTIONS.html  CONTRIBUTIONS.md  LICENSE  README.md  Taweret.core.html  Taweret.html  Taweret.mix.html  Taweret.models.html  Taweret.sampler.html  Taweret.utils.html  Taweretbandsdk.md  _config.yml  _toc.yml  book.html  book.md  environment.yml  genindex.html  ghp-upload.sh  how_to_add_documentation.html  how_to_add_new_mixing.html  index.html  installation.html  intro.html  macos_user.html  macos_users.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.py  tox.ini  (+1 more)
.github/workflows/: check_standards.yml  copy_docs.yml  deploy-jupyter-book.yml  draft-pdf.yml  install_meson.sh  make_docs.yml  pr_docs.yml  pr_pep8.yml  pr_standards.yml  pr_test.yml  publish_book.yml  publish_codecov.yml  publish_to_PyPI.yml  release.yml  run_anaconda_tests.yml  run_tests.yml  run_wheel_tests.yml  setup_base_python.sh  setup_tox_github_action.sh  test_and_deploy.yml  test_book.yml  test_docs.yml  test_oldest.yml  test_tools.yml
Taweret/: __init__.py
Taweret/calibrate/: likelihood_wrappers.py
Taweret/core/: base.py  base_mixer.py  base_model.py  setup.py  trees_setup.py  wrappers.py
Taweret/mix/: _mypackage.py  bivariate_linear.py  gaussian.py  linear.py  test_linear.py  trees.py
Taweret/models/: coleman_models.py  jetscape_sims_models.py  jetscape_sims_models_no_ex_in.py  models_samba.py  polynomial_models.py  samba_models.py
Taweret/sampler/: likelihood_wrappers.py
Taweret/utils/: dirichlet_prior.py  priors.py  utils.py
Tutorials/: N_Model_BMM.ipynb  Taweret_MMM_Tutorial.ipynb
_modules/: index.html
_modules/Taweret/core/: base_mixer.html  base_model.html  trees_setup.html
_modules/Taweret/mix/: bivariate_linear.html  gaussian.html  trees.html
_sources/: CONTRIBUTIONS.md  Taweret.mix.rst.txt  how_to_add_new_mixing.rst.txt  macos_user.rst.txt
_sources/notebooks/: Linear_BMM_with_cdf_function_for_SAMBA_models.ipynb.txt  Linear_BMM_with_switchcos_function_for_SAMBA_models_Bilby_constrained_prior.ipynb.txt
_static/: documentation_options.js
book/: BMM_intro.md  _config.yml  _toc.yml  landing.md
book/_build/html/: .buildinfo  (+6 more)
book/tutorials/: intro_tutorials.md
doc/: run_to_rebuild_tawret_rst.sh
doc/source/: Taweret.calibrate.rst  Taweret.mix.rst  Taweret.rst  conf.py  index.rst  instalation.rst  intro.rst
docs/: run_to_rebuild_tawret_rst.sh
docs/book/: _config.yml  landing.md
docs/source/: Taweret.core.rst  Taweret.mix.rst  Taweret.models.rst  Taweret.rst  Taweret.sampler.rst  Taweret.utils.rst  conf.py  how_to_add_documentation.rst  how_to_add_new_mixing.rst  index.rst  instalation.rst  installation.rst  intro.rst  macos_user.rst  macos_users.rst  modules.rst  requirements.txt  tox_environments.rst
jail_taweret/: base.py  git_how_to.txt  toy_models.py
joss_paper/: Taweret.tgz  main.md  main.tex  paper.html  paper.md  references.bib
joss_paper/Taweret/: main.bbl  main.tex
notebooks/: Bivariate_Test.html  Linear_BMM_with_cdf_function_for_SAMBA_models.html  Linear_BMM_with_cdf_function_for_coleman_models.html  Linear_BMM_with_cdf_function_for_coleman_models.ipynb  Linear_BMM_with_step_function_for_SAMBA_models.html  Linear_BMM_with_switchcos_function_for_SAMBA_models.html  Linear_BMM_with_switchcos_function_for_SAMBA_models_Bilby_constrained_prior.html  N_Model_BMM.html  Trees_BMM_2D.html  Trees_BMM_2D_K_models.html  Trees_BMM_2D_K_models.ipynb  coleman_models_BMM_comparative_study.html
outdir/: label_result.json  label_resume.pickle
src/: __init__.py
src/Taweret/: __init__.py  test.py
src/core/: wrappers.py
src/mix/: bivariate_linear.py
src/models/: coleman_models.py  samba_models.py
src/utils/: utils.py
subpackages/js-sims-bayes/: .gitignore  README.md  Usage.md  environment.yml  prep_env.sh  prepare_for_widget.sh  run_closure_test.sh  run_closure_test_parallel.sh  run_full_analysis.sh
test/: samba_results.txt  test_bivariate_linear.py  test_gaussian.py  test_trees.py  test_trees_old.py  test_wrappers.py
test/bart_bmm_test_data/: 2d_mmean.txt  2d_pmean.txt  2d_wmean.txt  2d_x_train.txt  2d_y_train.txt
testing/: Global_Linear_Mixing.ipynb  Learning-Bilby.ipynb  _mypackage.py  coleman-example-no-local.ipynb  coleman-example.ipynb  my_plotting.py  plot_triangle.py  test_linear_1.py  test_linear_2.py  test_linear_3.py  test_linear_SAMBA.ipynb  test_linear_local_1.py
tests/: samba_results.txt  test_bivariate_linear.py  test_gaussian.py
tests/bart_bmm_test_data/: 2d_x_train.txt  2d_y_train.txt
tools/: check_python_code.sh  test_python_installation.py
(+156 files in other folders)
