[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
Taweret = ["tests/samba_results.txt", "tests/bart_bmm_test_data/2d_*.txt"]

[project]
name = "Taweret"
version = "1.0.2"
authors = [
    { name="Kevin Ingles", email="kingles@illinois.edu"},
    { name="Dananjaya (Dan) Liyanage", email="liyanage@osu.edu"},
    { name="Alexandra Semposki", email="as727414@ohio.edu"},
    { name="John Yannotty", email="yannotty.1@buckeyemail.osu.edu"},
]
description = "A python package for Bayesian model mixing"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.20.3",
    "matplotlib",
    "scipy>=1.7.0",
    "seaborn",
    "emcee",
    "corner",
    "scikit-learn",
    "cycler",
    "statistics",
    "bilby",
    "ptemcee",
    "sphinx_rtd_theme",
    "sphinxcontrib-bibtex",
    "nbsphinx",
    "pandoc",
    "pytest",
    "pytest-cov",
    "Pyarrow",
    "openbtmixing",
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Intended Audience :: Science/Research",
]

[project-urls]
Homepage = "https://github.com/bandframework/Taweret.git"
Documentation = "https://bandframework.github.io/Taweret"
Issues = "https://github.com/bandframework/Taweret/issues"
