[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
Taweret = ["tests/samba_results.txt", "tests/bart_bmm_test_data/2d_*.txt"]

[project]
name = "Taweret"
version = "1.2.0"
authors = [
    { name="Kevin Ingles", email="kingles@illinois.edu"},
    { name="Dananjaya (Dan) Liyanage", email="liyanage@osu.edu"},
    { name="Alexandra Semposki", email="as727414@ohio.edu"},
    { name="John Yannotty", email="yannotty.1@buckeyemail.osu.edu"},
]
description = "A python package for Bayesian model mixing"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.9"
# We request that users who want to use non-default bilby samplers (e.g.,
# ptemcee) manually install the related packages first.
#
# See Issue #123 to understand upper bound on scipy version.
dependencies = [
    "numpy>=1.20.3",
    "matplotlib",
    "scipy>=1.7.0,<1.15.0",
    "bilby",
    "pytest",
    "openbtmixing",
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Intended Audience :: Science/Research",
]

[project-urls]
Homepage = "https://github.com/bandframework/Taweret.git"
Documentation = "https://bandframework.github.io/Taweret"
Issues = "https://github.com/bandframework/Taweret/issues"

[tool.sphinx.html_theme_options]
display_version = true
