#
# IMPORTANT: Please ensure that all changes made to Python and external
# dependence versions are made in a consistent way in tox.ini and in actions.
#

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
Taweret = ["tests/samba_results.txt", "tests/bart_bmm_test_data/2d_*.txt"]

[project]
name = "Taweret"
version = "1.2.0"
authors = [
    { name="Kevin Ingles", email="kingles@illinois.edu"},
    { name="Dananjaya (Dan) Liyanage", email="liyanage@osu.edu"},
    { name="Alexandra Semposki", email="as727414@ohio.edu"},
    { name="John Yannotty", email="yannotty.1@buckeyemail.osu.edu"},
]
description = "A python package for Bayesian model mixing"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
# We request that users who want to use non-default bilby samplers (e.g.,
# ptemcee) manually install the related packages first.
#
# We use bilby>=2.5.0 to cover scipy incompatibilities (see Issue 123).
#
# numpy/scipy minimum versions set for v1.2.0 release based on discussion in
# Issue #140.
dependencies = [
    "numpy>=1.21.0",
    "scipy>=1.10.0",
    "bilby>=2.5.0",
    "openbtmixing",
    "matplotlib",
    "pytest",
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Intended Audience :: Science/Research",
]

[project-urls]
Homepage = "https://github.com/bandframework/Taweret.git"
Documentation = "https://bandframework.github.io/Taweret"
Issues = "https://github.com/bandframework/Taweret/issues"

[tool.sphinx.html_theme_options]
display_version = true
